<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
        android:id="@+id/hats_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rrvEmptyLayoutId="@layout/empty_list"
        app:rrvIsRefreshable="false"
        app:rrvLayoutType="LinearLayout"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_hat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:elevation="6dp"
        app:layout_anchor="@id/hats_list"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"/>

</android.support.design.widget.CoordinatorLayout>