<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/hat_list_row"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ViewSwitcher
        android:id="@+id/current_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_content_margin">

        <ImageView
            android:id="@+id/current"
            android:layout_width="@dimen/hat_row_drawable_size"
            android:layout_height="@dimen/hat_row_drawable_size"
            android:src="@drawable/current_hat"/>

        <ImageView
            android:id="@+id/other"
            android:layout_width="@dimen/hat_row_drawable_size"
            android:layout_height="@dimen/hat_row_drawable_size"
            android:src="@drawable/other_hat"/>
    </ViewSwitcher>

    <TextView
        android:id="@+id/hat_name"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:layout_margin="@dimen/list_item_margin"
        android:gravity="center_vertical"/>
</LinearLayout>