<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/hat_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_content_margin">

        <EditText
            android:id="@+id/field_hat_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hat_name"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
